# goodix-27c6-5125

./: .gitignore  CMakeLists.txt  README.md  build.sh  constants.c  driver  driver.c  tls.h
include/: buffers.h  constants.h  goodix_init_seq.h  goodix_protocol.h  goodix_tls.h  goodix_usb.h  tls.h
src/: buffers.c  driver.c  goodix_init_seq.c  goodix_protocol.c  goodix_tls.c  goodix_usb.c  tls.c
test_things/: check_sum.py  fddownbase.py
